chore(spotless): format